[package]
name = "frc20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm_utils = {git = "https://github.com/filedrive-team/filedrive-contracts.git"}
cid = { version = "0.8.4", default-features = false }
fvm_sdk = "0.6.0"
fvm_shared = "0.6.0"
fvm_ipld_blockstore = "0.1.0"
fvm_ipld_encoding = "0.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0.56"
serde_json = "1.0.81"

[dev-dependencies]
fvm = "0.5.1"
libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0.52"
wasmtime = "0.35.2"

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"