[package]
name = "fvm_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = { version = "0.8.4", default-features = false }
fvm_sdk = "0.6.0"
fvm_shared = "0.6.0"
fvm_ipld_blockstore = "0.1.0"
fvm_ipld_encoding = "0.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0.56"